# RAG-Chatbot

./: .env.example  .gitignore  AGENTS.md  Project_Documentation.docx  README.md  pyproject.toml  run.sh
backend/: ai_generator.py  config.py  rag_system.py  search_tools.py
frontend/: index.html
tests/: test_models.py
